--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
+    "angular-bootstrap": "^0.12.2",
     "animate.css": "^3.7.0",
+    "bower": "^1.8.8",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "install": "^0.12.2",
+    "or": "^0.2.0",
     "swiper": "^4.4.6"
   },
   "cordova": {
